# Exercism

./: .gitignore  README.md  pyproject.toml
crawling/: copy_track_all_exercies.py  execute_command.py
crawling/config/: env_example.toml
crawling/exercism/: copy_track_all_exercies.py
go/acronym/.exercism/: metadata.json
go/all-your-base/.exercism/: metadata.json
go/allergies/.exercism/: metadata.json
go/alphametics/.exercism/: metadata.json
go/anagram/.exercism/: metadata.json
go/annalyns-infiltration/: annalyns_infiltration.go
go/annalyns-infiltration/.exercism/: metadata.json
go/armstrong-numbers/.exercism/: metadata.json
go/atbash-cipher/.exercism/: metadata.json
go/bank-account/.exercism/: metadata.json
go/binary-search-tree/.exercism/: metadata.json
go/binary-search/.exercism/: metadata.json
go/bob/.exercism/: metadata.json
go/book-store/.exercism/: metadata.json
go/bottle-song/.exercism/: metadata.json
go/bowling/.exercism/: metadata.json
go/cars-assemble/.exercism/: metadata.json
go/change/.exercism/: metadata.json
go/circular-buffer/.exercism/: metadata.json
go/clock/.exercism/: metadata.json
go/connect/: HELP.md  README.md
go/forth/: HELP.md  README.md
go/hello-world/: hello_world.go
go/lasagna/: lasagna.go
go/palindrome-products/: HELP.md
go/pov/: HELP.md
go/robot-simulator/: HELP.md
go/secret-handshake/: README.md
go/two-fer/: go.mod  two_fer.go
go/weather-forecast/: weather_forecast.go
go/welcome-to-tech-palace/: welcome_to_tech_palace.go
go/zebra-puzzle/: README.md
(+99 files in other folders)
