[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["twotwobread <dltndud9137@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
